cmake_minimum_required(VERSION 2.4.6)
include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)

# Set the build type.  Options are:
#  Coverage       : w/ debug symbols, w/o optimization, w/ code-coverage
#  Debug          : w/ debug symbols, w/o optimization
#  Release        : w/o debug symbols, w/ optimization
#  RelWithDebInfo : w/ debug symbols, w/ optimization
#  MinSizeRel     : w/o debug symbols, w/ optimization, stripped binaries
#set(ROS_BUILD_TYPE RelWithDebInfo)

rosbuild_init()

get_filename_component(IPMAS_DIRECTORY ${PROJECT_SOURCE_DIR} PATH)

#set the default path for built executables to the "bin" directory
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
#set the default path for built libraries to the "lib" directory
set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

set(sqlToCollision_LIBRARIES sqlKit mysqlcppconn ${sqlToCollision_LIBRARIES})
set(sqlToCollision_SOURCES src/main.cpp ${IPMAS_DIRECTORY}/objectGen/src/recurseLocation.cpp)
#uncomment if you have defined messages
#rosbuild_genmsg()
#uncomment if you have defined services
#rosbuild_gensrv()

#common commands for building c++ executables and libraries
#rosbuild_add_library(${PROJECT_NAME} src/example.cpp)
#target_link_libraries(${PROJECT_NAME} another_library)
#rosbuild_add_boost_directories()
#rosbuild_link_boost(${PROJECT_NAME} thread)
#rosbuild_add_executable(example examples/example.cpp)
#target_link_libraries(example ${PROJECT_NAME})

include_directories(${IPMAS_DIRECTORY}/AutoGen ${IPMAS_DIRECTORY}/objectGen/include)
link_directories(${IPMAS_DIRECTORY}/AutoGen)

rosbuild_add_executable(sqlToCollision ${sqlToCollision_SOURCES})

target_link_libraries(sqlToCollision ${sqlToCollision_LIBRARIES})
